fix: enhance list styling and footer link in 01-listas.html for better consistency

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,9 @@
 
 @layer base {
   body {
-    @apply bg-slate-800 px-4 py-2 text-white;
+    @apply bg-slate-800 p-8 px-4 py-2 text-white;
+  }
+  h1 {
+    @apply mb-2 text-3xl font-bold;
   }
 }
